--- a/App-iOS-universal/Base.lproj/Main.storyboard
+++ b/App-iOS-universal/Base.lproj/Main.storyboard
@@ -38,30 +38,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W85-kZ-6Xv">
-                                <rect key="frame" x="135" y="226" width="81" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="indexbg" translatesAutoresizingMaskIntoConstraints="NO" id="RWX-6k-we9">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W85-kZ-6Xv">
+                                <rect key="frame" x="42" y="560" width="291" height="30"/>
                                 <state key="normal" title="TO DO LIST"/>
                                 <connections>
                                     <segue destination="hqN-7K-930" kind="show" id="dcW-V3-x3C"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ovR-uI-4Ks">
-                                <rect key="frame" x="143" y="304" width="64" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="CUSTOM"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ovR-uI-4Ks">
+                                <rect key="frame" x="42" y="502" width="291" height="30"/>
+                                <state key="normal" title="DECORATION"/>
                                 <connections>
                                     <segue destination="416-Db-Tha" kind="show" id="3iZ-YH-rMb"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Udf-v2-N4k" firstAttribute="top" secondItem="RWX-6k-we9" secondAttribute="bottom" id="Cab-PK-gqs"/>
+                            <constraint firstItem="RWX-6k-we9" firstAttribute="leading" secondItem="1Oz-mJ-cvh" secondAttribute="leading" id="JKC-0h-0y7"/>
+                            <constraint firstItem="ovR-uI-4Ks" firstAttribute="top" secondItem="W85-kZ-6Xv" secondAttribute="bottom" constant="-88" id="OzU-OL-twN"/>
+                            <constraint firstItem="ovR-uI-4Ks" firstAttribute="leading" secondItem="1Oz-mJ-cvh" secondAttribute="leadingMargin" constant="26" id="fGm-LO-cRO"/>
+                            <constraint firstItem="ovR-uI-4Ks" firstAttribute="centerX" secondItem="1Oz-mJ-cvh" secondAttribute="centerX" id="fL6-9u-Td0"/>
+                            <constraint firstItem="RWX-6k-we9" firstAttribute="top" secondItem="1Oz-mJ-cvh" secondAttribute="top" id="fsO-vx-XS0"/>
+                            <constraint firstItem="Udf-v2-N4k" firstAttribute="top" secondItem="ovR-uI-4Ks" secondAttribute="bottom" constant="135" id="oGQ-YF-04F"/>
+                            <constraint firstItem="ovR-uI-4Ks" firstAttribute="leading" secondItem="W85-kZ-6Xv" secondAttribute="leading" id="ofG-2p-X0J"/>
+                            <constraint firstAttribute="trailing" secondItem="RWX-6k-we9" secondAttribute="trailing" id="peB-VH-MFT"/>
+                            <constraint firstItem="ovR-uI-4Ks" firstAttribute="trailing" secondItem="W85-kZ-6Xv" secondAttribute="trailing" id="xwf-On-Xc1"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="INDEX" id="ta6-n8-ziZ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OEX-NM-wnW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="778" y="466"/>
+            <point key="canvasLocation" x="776.79999999999995" y="465.51724137931041"/>
         </scene>
         <!--Add Task View Controller-->
         <scene sceneID="8BX-4E-76f">
@@ -174,7 +187,7 @@
                                         <rect key="frame" x="0.0" y="170" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="luH-q2-N77" id="hIM-iI-Bvy">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -243,12 +256,9 @@
                                 <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="19"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ju" translatesAutoresizingMaskIntoConstraints="NO" id="fHg-tC-kL1">
-                                <rect key="frame" x="54" y="64" width="267" height="296"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Protocol used!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yx0-AB-B2S">
-                                <rect key="frame" x="54" y="340" width="267" height="16"/>
-                                <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="17"/>
+                                <rect key="frame" x="54" y="325.5" width="267" height="30.5"/>
+                                <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="26"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -275,6 +285,9 @@
                                     <action selector="btnAct:" destination="416-Db-Tha" eventType="touchUpInside" id="Ouc-X1-JxO"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="prot" translatesAutoresizingMaskIntoConstraints="NO" id="fHg-tC-kL1">
+                                <rect key="frame" x="62" y="126" width="250" height="167"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -288,6 +301,7 @@
                             <constraint firstItem="Tb9-aq-EgO" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="7JW-UF-2xE"/>
                             <constraint firstItem="Tb9-aq-EgO" firstAttribute="centerX" secondItem="2tO-RY-qwO" secondAttribute="centerX" id="8Ch-rB-mUu"/>
                             <constraint firstItem="F8r-T9-r59" firstAttribute="centerX" secondItem="2tO-RY-qwO" secondAttribute="centerX" id="8bq-SA-hJz"/>
+                            <constraint firstItem="trt-Hq-TT7" firstAttribute="top" secondItem="F8r-T9-r59" secondAttribute="bottom" constant="25" id="93d-Fc-1vJ"/>
                             <constraint firstItem="zKD-27-ZeG" firstAttribute="centerX" secondItem="2tO-RY-qwO" secondAttribute="centerX" id="9aW-ee-6DF"/>
                             <constraint firstItem="yx0-AB-B2S" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="ANa-dy-i4I"/>
                             <constraint firstItem="F8r-T9-r59" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="Aqr-jR-LGK"/>
@@ -296,15 +310,14 @@
                             <constraint firstItem="zKD-27-ZeG" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="PGQ-17-7eu"/>
                             <constraint firstItem="yx0-AB-B2S" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="Ryn-Sa-YJd"/>
                             <constraint firstItem="fHg-tC-kL1" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="SNz-wi-oKU"/>
-                            <constraint firstItem="fHg-tC-kL1" firstAttribute="top" secondItem="cjO-Sz-AOK" secondAttribute="bottom" id="Szr-OO-sF7"/>
+                            <constraint firstItem="fHg-tC-kL1" firstAttribute="top" secondItem="cjO-Sz-AOK" secondAttribute="bottom" constant="62" id="Szr-OO-sF7"/>
                             <constraint firstItem="trt-Hq-TT7" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="WXx-6T-F38"/>
-                            <constraint firstItem="yx0-AB-B2S" firstAttribute="top" secondItem="cjO-Sz-AOK" secondAttribute="bottom" constant="276" id="XM9-cN-yv1"/>
                             <constraint firstItem="2tO-RY-qwO" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="YYr-wl-s7G"/>
-                            <constraint firstItem="F8r-T9-r59" firstAttribute="top" secondItem="fHg-tC-kL1" secondAttribute="bottom" constant="8" symbolic="YES" id="ZmF-El-hBE"/>
+                            <constraint firstItem="F8r-T9-r59" firstAttribute="top" secondItem="fHg-tC-kL1" secondAttribute="bottom" constant="75" id="ZmF-El-hBE"/>
                             <constraint firstItem="Tb9-aq-EgO" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="bWz-a1-MIu"/>
                             <constraint firstItem="trt-Hq-TT7" firstAttribute="top" secondItem="F8r-T9-r59" secondAttribute="bottom" constant="25" id="bpu-by-Abk"/>
                             <constraint firstItem="zKD-27-ZeG" firstAttribute="leading" secondItem="Tb9-aq-EgO" secondAttribute="leading" id="ccm-fh-77V"/>
-                            <constraint firstItem="fHg-tC-kL1" firstAttribute="leading" secondItem="Aih-W5-TFI" secondAttribute="leadingMargin" constant="38" id="dn7-1p-6lI"/>
+                            <constraint firstItem="fHg-tC-kL1" firstAttribute="leading" secondItem="Aih-W5-TFI" secondAttribute="leadingMargin" constant="46" id="dn7-1p-6lI"/>
                             <constraint firstItem="F8r-T9-r59" firstAttribute="top" secondItem="yx0-AB-B2S" secondAttribute="bottom" constant="12" id="emU-yl-ZaP"/>
                             <constraint firstItem="trt-Hq-TT7" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="f6c-w6-zhx"/>
                             <constraint firstItem="yx0-AB-B2S" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="g9C-Wf-UfX"/>
@@ -321,7 +334,7 @@
                             <constraint firstItem="yx0-AB-B2S" firstAttribute="centerX" secondItem="2tO-RY-qwO" secondAttribute="centerX" id="spc-a1-Cew"/>
                             <constraint firstItem="fHg-tC-kL1" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="tgf-Xy-6b4"/>
                             <constraint firstItem="trt-Hq-TT7" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="vy8-8s-Bc6"/>
-                            <constraint firstItem="fHg-tC-kL1" firstAttribute="leading" secondItem="yx0-AB-B2S" secondAttribute="leading" id="xuK-j3-hwO"/>
+                            <constraint firstItem="fHg-tC-kL1" firstAttribute="leading" secondItem="yx0-AB-B2S" secondAttribute="leading" constant="8" id="xuK-j3-hwO"/>
                             <constraint firstItem="zKD-27-ZeG" firstAttribute="centerX" secondItem="Aih-W5-TFI" secondAttribute="centerX" id="zgn-6f-nbK"/>
                         </constraints>
                     </view>
@@ -338,7 +351,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ju" width="128" height="128"/>
+        <image name="indexbg" width="375" height="512"/>
+        <image name="prot" width="250" height="159"/>
         <image name="sp" width="640" height="426"/>
     </resources>
 </document>
